# umic-alpamayo

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  fusion_proposal.yml
.github/workflows/: lint.yml
configs/: expected_thor.yaml
docs/: 260610_01_umic_design_ko.md  260611_official_benchmark.md  260611_output_equivalence.md  260706_ve_production_integration.md  REPORT_TEMPLATE.md  current_scope.md  onboarding.md
scripts/: check_env.py  run_all.sh  run_pipeline.py  setup_thor.sh
src/umic/: __init__.py  bench.py  cache.py  diffusion.py  graph.py  integrate.py  optimize.py
src/umic/kernels/: __init__.py  fused_ffn.py  layernorm.py  linear.py  rmsnorm.py  rope.py
